resources/css/style.css
@charset "UTF-8";
/* CSS Document */



	/*  GLOBAL SIZES  */

html {
	font-size: 18px;
	line-height: 1.4;
}

body {
	margin: 0px;
	padding: 0px;
}

.content {
	width: 100%;
	max-width: 960px;
	font-size: 1rem;
	font-family: Helvetica, Arial, sans-serif;
	font-weight: 100;
	margin: auto;
	
}

 .row-full{
 width: 100vw;
 position: relative;
 margin-left: -50vw;
 left: 50%;
}



	/*  TOP NAV  */

.top-nav {
	background-color: cadetblue;
	color: snow;
	display: inline-flex;
	width: 960px;
	margin-top: 1rem;
	position: fixed;
	z-index: 10;	
}

.top-nav img {
	width: auto;
	height: 1.5rem;
	margin: auto;
	margin-left: 2rem;
	margin-right: 1rem;
}

.top-nav p {
	font-weight: 100;
	font-size: 1rem;
	width: 50%;
}

.top-nav nav {
	text-decoration: none;
	width: 50%;
	padding-top: 1rem;
	text-align: right;
}

.top-nav a {
	color: snow;
	margin-right: 2rem;
	text-decoration: none;
}



	/*  MAIN BANNER  */

.main-banner {
	background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/glasses-bg.png);
	height: 30rem;
	margin-top: 0px;
	padding: 0px;
	background-size: cover;
	display: flex;
	justify-content: flex-end;
	align-items: center;
}

.headline-container {
	width: 1032px;
	display: inline-flex;
	justify-content: flex-end;
	margin:  0 auto;
	
}

.headline {
	background-color: snow;
	width: auto;
	margin: 0px;
	padding: 1.5rem 5rem;
}

.headline h1 {
	padding: 0px;
	margin: 0px;
	width: auto;
}



	/*  DETAILS  */

.details {
	width: 100%;
	display: inline-flex;
	justify-content: center;
	flex-direction: column;
}

.icons {
	display: inline-flex;
	width: 100%;
	justify-content: center;
}

.exams {
	height: 8rem;
	width: 5rem;
	margin: 3rem 3rem;
	text-align: center;
	
	justify-content: center;
	align-content: center;
	align-items: center;
}

.exams img {
	width: 3.5rem;
	height: auto;
}

.fittings {
	height: 8rem;
	width: 5rem;
	margin: 3rem 3rem;
	text-align: center;
}

.fittings img {
	width: 5rem;
	height: auto;
	padding-top: 0.85rem;
}

.delivery {
	height: 8rem;
	width: 5rem;
	padding: 3rem 3rem;
	text-align: center;
}

.delivery img {
	width: 5rem;
	height: auto;
	padding-top: 0.7rem;
}



	/*  ABOUT  */

.about {
	display: inline-flex;
	width: 100%;
	justify-content: center;
}

.information {
	width: 35%;
	height: auto;
	padding: 0px 5%;
	display: inline-flex;
	
	flex-direction: column;
}

.information h2 {
	background-color: cadetblue;
	color: snow;
	font-size: 1rem;
	font-weight: bold;
	padding: 0.5rem 1.25rem;
	margin: 0px;
	width: 10rem;
}

.information p {
	margin-top: 1rem;
}



	/*  FOOTER  */

.footer {
	background-color: azure;
	margin-top: 5rem;
	padding: 4rem;
	display: block;
}

.footer img {
	height: 1.5rem;
	width: auto;
	display: inline-flex;
	vertical-align: middle;
}

.footer p {
	padding-left: 1rem;
	margin: 0px;
	display: inline-flex;
}



	/*  MEDIA QUERIES  */

@media only screen and (min-width: 960px) {
	.menu {
		display: none;
	}
}

@media only screen and (max-width: 960px) {
	.content {
		width: 100%;
	}
	
	.top-nav {
		width: 100%;
		margin: 0px;
	}
	
	.menu {
		display: none;
	}
	
	.main-banner {
		height: 22rem;
		width: 100%;
	}
	
	.headline-container {
		margin: 0px;
		margin-top: 5rem;
		margin-right: 2rem;
	}
	
	.headline {
		margin: 0px;
		padding: 0px;
	}
	
	.headline h1 {
		padding: 0.75rem 4rem;
		font-size: 1.33rem;
	}
}

@media only screen and (max-width: 785px) {
	.nav-bar {
		display: none;
	}
	
	.top-nav p {
		display: none;
	}
	
	.menu {
		display: flex;
		float: right;
		
		margin: auto;
		justify-content: center;
		align-items: center;
		vertical-align: middle;
	}
	
	.main-banner {
		height: 17rem;
		background-position: 20%;
	}
	
	.headline-container {
		margin-right: 0px;
		margin-top: 9rem;
		width: 100%;
	}
	
	.headline {
		padding: 1rem;
		margin: 0px;
		width: 100%;
	}
	
	.headline h1 {
		width: 100%;
		padding: 0px;
		text-align: center;
	}
	
	.icons {
		flex-direction: column;
		align-items: center;
		padding: 3.77rem 0rem;
	}
	
	.icons p {
		font-size: 0.77rem;
	}
	
	.exams,
	.fittings,
	.delivery {
		margin: 0px;
		padding: 0px;
		height: auto;
	}
	
	.about {
		flex-direction: column;
		align-items: center;
	}
	
	.information {
		width: 100%;
		padding: 0px;
		margin: 0px;
	}
	
	.information h2 {
		width: 100%;
		padding: 1rem 0px;
		text-align: center;
	}
	
	.information p {
		width: 95%;
		margin: auto;
		padding-top: 1rem;
		padding-bottom: 4rem;
	}
	
	.footer {
		margin: 0px;
		display: flex;
		justify-content: center;
	}
	
	.footer p {
		display: none;
	}
	
	.footer img {
		
		
	}
}

